I finished Web API testing for a volunteer page and foster page.

--- a/foster.html
+++ b/foster.html
@@ -134,7 +134,7 @@
     </div>
     <script>
         //The variables pointing towards each input field.
-        var applicantName = document.querySelector("#namewrapper");
+        var applicantName = document.querySelector("#name");
         var phoneNumber = document.querySelector("#phonenum");
         var emailAddress = document.querySelector("#email");
         var homeAddress = document.querySelector("#address");
@@ -213,6 +213,7 @@
                 EndDate: endDate.value,
                 OtherInfo: otherInfo.value,
             };
+            console.log(fosterFormInfo);
             var fosterAjax = new XMLHttpRequest();
             fosterAjax.onreadystatechange = function() {
                 if (fosterAjax.readyState === 4 && fosterAjax.status === 200) {
