--- a/volunteer_page.html
+++ b/volunteer_page.html
@@ -232,7 +232,7 @@ input[type='text'], input[type='email'], input[type='date'], input[type='tel']{
                         Want to participate? <br> Please write a form.
                     </div>
                     <div class="field"><span class="f_title">Name </span> <input id="name" name="name" type="text" placeholder="Your name"><span id="required"> *</span></div>
-                    <div class="field"><span class="f_title" placeholder = "000 - 0000 - 0000">Phone</span>
+                    <div class="field"><span class="f_title" >Phone</span>
                         <!-- country codes (ISO 3166) and Dial codes. -->
                         <select name="phone" id="countryCode">
                             <option data-countryCode="KR" value="82">Korea South (+82)</option>
