--- a/homepage.html
+++ b/homepage.html
@@ -134,10 +134,6 @@
     display: block;
     }
 
-    #abouttextstyle {
-
-    }
-
     #slideshowmobile{
         height:300px;
         width: 100%;
@@ -190,7 +186,12 @@
         text-align: center;
         padding-top: 5px;
         display: block;
+    }
 
+    .seemoretext {
+        padding: 5%;
+        font-family: sans-serif;
+        line-height: 130%;
     }
 
     .imgstyle {
